<resources>
    <string name="app_name">医疗物业</string>
    <string name="repair_manage">接报管理</string>
    <string name="criminal_manage">报修管理</string>
    <string name="maintenance_manage">维修任务</string>
    <string name="check_manager">巡检任务</string>
    <string name="classes_manager">排班管理</string>
    <string name="job_manager">任务管理</string>
    <string name="information">基本信息</string>
    <string name="maintenance">维修</string>
    <string name="check">巡检</string>
    <string name="state_all">全部</string>
    <string name="state_wait">待维修</string>
    <string name="state_done">已维修</string>
    <string name="state_hang">已挂起</string>
    <string name="from">报修来源</string>
    <string name="phone">报修电话</string>
    <string name="department">报修科室</string>
    <string name="address">报修地点</string>
    <string name="regist">登记人员</string>
    <string name="content">报修内容</string>
    <string name="type">事件类型</string>
    <string name="time">登记时间</string>
    <string name="maintenance_info">维修信息</string>
    <string name="material">材料信息</string>
    <string name="hang_time">挂起时间</string>
    <string name="reason">挂起理由</string>
    <string name="main_people">维修人员</string>
    <string name="finish_time">完工日期</string>
    <string name="feedback">维修反馈：</string>
    <string name="picture">图片信息</string>
    <string name="state_new">新建</string>
    <string name="state_cancel">已取消</string>
    <string name="state_finish">结单</string>
    <string name="material_name">材料名称</string>
    <string name="user">我的</string>
    <string name="order_state">工单状态：</string>
    <string name="regist_name">登记人员：</string>
    <string name="phone_number">报修电话：</string>
    <string name="order_number">报修单号：</string>
    <string name="from_name">报修人员：</string>
    <string name="setIP">设置IP地址</string>
    <string name="outLine"><u>离线登录</u></string>
    <string name="home">系统首页</string>
    <string name="loginout">退出登录</string>
    <string name="version">当前版本</string>
    <string name="clear">清除缓存</string>
    <string name="change_pwd">修改密码</string>
    <string name="commit">WIFI自动提交信息</string>
    <string name="photo">工作相册</string>
    <string name="not_null">\"账户或者密码为空哦！亲\"</string>
    <string name="sign">签到</string>
    <string name="no_net">无网络信号！</string>
    <string name="check_number">任务单号：</string>
    <string name="device_name">设备名称：</string>
    <string name="device_code">设备代码：</string>
    <string name="duty_man">责任人员：</string>
    <string name="start_time">开始时间：</string>
    <string name="copy_list">后\n台\n抄\n表</string>
    <string name="operation">维\n修</string>
    <string name="device_copy">设备抄表</string>
    <string name="check_condition">巡检情况</string>
    <string name="check_info">基本信息</string>
    <string name="job_name">任务名称</string>
    <string name="done_time">结束时间</string>
    <string name="check_man">巡检人员：</string>
    <string name="check_state">巡检状态：</string>
    <string name="should_check">待巡检</string>
    <string name="check_done">已完工</string>
    <string name="check_over">已超时</string>
    <string name="over_finish">超时补录</string>
    <string name="search">查询</string>
    <string name="state_start">待开始</string>
    <string name="state_recieve">待接收</string>
    <string name="pleased">满意</string>
    <string name="very_pleased">非常满意</string>
    <string name="choose_pleased">综合评级</string>
    <string name="no_pleased">不满意</string>
    <string name="need_change">需改进</string>
    <string name="no_pic">无维修图片</string>
    <string name="pic_before">维修前照片：</string>
    <string name="pic_after">维修后照片：</string>
    <string name="repair_content">报修内容：</string>
    <string name="repair_material">维修材料：</string>
    <string name="open">提交</string>
    <string name="logist">医疗物业管理</string>
    <string name="uncommit">未提交的维修任务</string>
    <string name="success_recieve">接收成功</string>
    <string name="start_maintance">开始维修</string>
    <string name="start_fail">开始失败</string>
    <string name="userdetail">个人资料</string>
    <string name="hydroelectric">水电抄表</string>
    <string name="more">更多</string>
    <string name="no_same">不符信息</string>
    <string name="uncommit_check">未提交的巡检任务</string>
    <string name="name">真实姓名</string>
    <string name="tel">联系电话</string>
    <string name="login">立即登录</string>
    <string name="reportman">报修人员</string>
    <string name="user_center">用户中心</string>
    <string name="provisional">临时巡检</string>
    <string name="zxing">应用二维码</string>
    <string name="handwrite">签名确认：</string>
    <string name="data_center">数据中心</string>
    <string name="performance">绩效考核</string>
    <string name="personal_center">个人中心</string>
    <string name="check_manager_today">今日巡检任务</string>
    <string name="check_manager_week">本周巡检任务</string>
    <string name="check_manager_month">本月巡检任务</string>
    <string name="order_type">事件分类：</string>
    <string name="regist_time">登记时间：</string>
    <string name="order_address">报修地址：</string>
    <string name="abnormal">维修申报</string>
    <string name="maintain_material">维修材料</string>
    <string name="maintain_photo">维修照片</string>
    <string name="evaluate">科室评价</string>
    <string name="abnormal_reason">申报原因</string>
    <string name="remark">备注描述</string>
    <string name="takephoto">拍照取证</string>
    <string name="photo_warming">温馨提醒：请尽量上传较小的图片，以免造成上传速度低下</string>
    <string name="check_address">巡检地址：</string>
    <string name="result_discrib">结果描述：</string>
    <string name="copy">后台抄表</string>
    <string name="cancel_check">取消巡检</string>
    <string name="check_photo">拍照记录</string>
    <string name="plan_time">开始时间：</string>
    <string name="shelve">挂起工单</string>
    <string name="task_name">任务名称：</string>
    <string name="device_type">设备类型：</string>
    <string name="event_type">事件类型：</string>
    <string name="task_type">报修类型：</string>
    <string name="wait">目前暂无功能</string>
    <string name="no_data">目前暂无数据</string>
    <string name="company_name">同济协和后勤管理有限公司</string>
    <string name="choose_reason">挂起原因：</string>
    <string name="copy_maintain">临时维修</string>
    <string name="no_check_data">巡检暂无数据</string>
    <string name="no_maintain_data">维修暂无数据</string>
    <string name="ignore"><u>全部忽略</u></string>
    <string name="syn">数据同步</string>
    <string name="collection">我的收藏</string>
    <string name="check_result">巡检结果</string>
    <string name="systemSetting">系统设置</string>
</resources>
