<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_no_circle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2000" />

        <TextView
            android:id="@+id/tv_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/common_padding"
            android:text="@string/sign"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2000" />

        <TextView
            android:id="@+id/tv_hydroelectric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/common_padding"
            android:text="@string/hydroelectric"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#2000" />

        <TextView
            android:id="@+id/tv_provisional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/common_padding"
            android:text="@string/provisional"
            android:textSize="@dimen/common_text_size" />
    </LinearLayout>
</LinearLayout>